--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -176,6 +176,7 @@ basic:
             cock: 🐔 Cock
             sad: 🎺 Sad
             badumtss: 🥁 Badumtss
+            dushno: 🪟 Dushno
             back: ↩️ Назад
 admin:
     addUser:
