--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -427,7 +427,7 @@ needs:
     bought:
         success: |
             ✅ {{username}} купил #`{{item}}#` в спейс
-        notfound: 🙄 Открытого запроса на покупку с таким именем не нашлось
+        notfound: 🙄 Открытого запроса на покупку с таким именем не нашлось, наверное уже купили
         undo: ❌ Отменить покупку
 service:
     welcome:
