gaming more efficient routing, fixed the issue with non / commands parsed

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -315,7 +315,7 @@ embassy:
             #`/{{deviceName}} down#` - Выключить
             #`/{{deviceName}} status#` - Проверить доступность
             #`/{{deviceName}} help#` - Вывести это сообщение
-        notfound: ⚠️ Девайс не известен системе
+        notfound: ⚠️ Девайс не известен системе или что-то пошло очень не так
         wake:
             success: ⏰ Попытались разбудить девайс, следи за его статусом
             fail: ⚠️ Не получилось разбудить девайс
