--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -339,6 +339,18 @@ embassy:
         knock: |
             📢 Тук-тук {{residentsInside}}
         noresidents: 🛏 A внутри резиденты не отмечались
+    neural:
+        sd:
+            help: |
+                🏞 Эта команда позволяет сгенерить изображение с помощью StableDiffusion. 
+
+                #`/txt2img cute cat drawing#`
+
+                🖥 Модель хостится у нас в спейсе на игровой машине
+                на втором этаже, поэтому не забудь включить ее перед
+                использованием и выключить после, если ей никто не пользуется.
+                Управление машиной в команде /gaming
+            fail: ⚠️ Не получилось сгенерировать изображение, а /gaming точно включен?
 
 funds:
     funds: |
