--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -1,10 +1,7 @@
 general:
     error: Что-то пошло не так
 basic:
-    help: |
-        [Я нахожусь в разработке, ты можешь поучаствовать в моем развитии в репозитории на гитхабе спейса].
-        Держи мой список команд:
-        {{availableCommands}}{{globalModifiers}}
+    help: "{{availableCommands}}{{globalModifiers}}"
     about: |
         🏫 Hacker Embassy (Ереванский Хакерспейс) - это пространство, где собираются единомышленники, увлеченные технологиями и творчеством. Мы вместе работаем над проектами, делимся идеями и знаниями, просто общаемся.
           
