--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -467,6 +467,14 @@ service:
             Загляни еще раз в мои команды /help, теперь тебе доступно много нового. Обрати внимание на /control, открывающий тебе безграничную (ну или не очень) власть над самим спейсом. Используй её с умом.
 
             🎉🎉🎉 Резиденты, поднимите свои сосиски за {{newMember}}
+    openai:
+        help: |
+            🔮 Задай вопрос нейросети. Доступно только в групповых чатах спейса.
+
+            #`/ask Как пропатчить KDE под FreeBSD#`
+            #`/ask Напиши код на питоне который инвертирует входную строку#`
+        notset: ⚠️ Бот еще не настроен для этой функциональности
+        chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
 status:
     buttons:
         in: 🤝 Я в спейсе
