gpt api timeout

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -475,6 +475,7 @@ service:
             #`/ask Напиши код на питоне который инвертирует входную строку#`
         notset: ⚠️ Бот еще не настроен для этой функциональности
         chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
+        error: ⚠️ Что-то пошло не так
 status:
     buttons:
         in: 🤝 Я в спейсе
