--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -348,7 +348,7 @@ embassy:
                 на втором этаже, поэтому не забудь включить ее перед
                 использованием и выключить после, если ей никто не пользуется.
                 Управление машиной в команде /gaming
-            fail: ⚠️ Не получилось сгенерировать изображение, а /gaming точно включен?
+            fail: ⚠️ Не получилось сгенерировать изображение, а /gaming точно включен и еще не сдох от тонны запросов?
 
 funds:
     funds: |
@@ -475,7 +475,7 @@ service:
             #`/ask Напиши код на питоне который инвертирует входную строку#`
         notset: ⚠️ Бот еще не настроен для этой функциональности
         chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
-        error: ⚠️ Что-то пошло не так
+        error: ⚠️ Что-то пошло не так, наверное слишком долго отвечает
 status:
     buttons:
         in: 🤝 Я в спейсе
