--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -342,7 +342,8 @@ embassy:
                 🏞 Эта команда позволяет сгенерить изображение с помощью StableDiffusion. 
 
                 #`/txt2img cute cat drawing#`
-                #`/txt2img race car != red#`
+                #`/img2img cute cat#` (как подпись к загруженной фотке)
+                #`/sd race car != red#`
 
                 🖥 Модель хостится у нас в спейсе на игровой машине
                 на втором этаже, поэтому не забудь включить ее перед
