better rcosts text

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -406,7 +406,7 @@ funds:
     showcosts:
         fail: Текущий сбор на аренду не найден
     residentsdonated: |
-        💰 Резиденты, донатившие в этом месяце:
+        💰 Резидентские донаты в этом месяце:
     export:
         empty: ⚠️ Нечего экспортировать
         fail: ⚠️ Что-то не так
