--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -174,6 +174,7 @@ basic:
             sad: 🎺 Sad
             badumtss: 🥁 Badumtss
             dushno: 🪟 Dushno
+            stop: 🔇 ХВААААТИТ
             back: ↩️ Назад
 admin:
     addUser:
@@ -332,6 +333,9 @@ embassy:
         help: 🗣 С помощью этой команды можно воспроизвести любой звук по ссылке
         success: 🗣 Звук отправлен на динамик
         fail: ⚠️ Не получилось воспроизвести
+    stop:
+        success: 🔇 Воспроизведение на динамике остановлено
+        fail: ⚠️ Не получилось остановить воспроизведение
     knock:
         knock: |
             📢 Тук-тук {{residentsInside}}
