--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -174,6 +174,7 @@ basic:
             sad: 🎺 Sad
             badumtss: 🥁 Badumtss
             dushno: 🪟 Dushno
+            all: 🎶 Список всех звуков
             stop: 🔇 ХВААААТИТ
             back: ↩️ Назад
 admin:
@@ -336,6 +337,11 @@ embassy:
     stop:
         success: 🔇 Воспроизведение на динамике остановлено
         fail: ⚠️ Не получилось остановить воспроизведение
+    availablesounds:
+        success: |
+            🎶 Список доступных звуков 
+            {{sounds}}
+        fail: ⚠️ Не получилось найти доступные звуки
     knock:
         knock: |
             📢 Тук-тук {{residentsInside}}
