--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -230,11 +230,12 @@ embassy:
         success: 🔑 Дверь открыта
         nomac: ❌ Твой MAC адрес не обнаружен роутером. Надо быть рядом со спейсом, чтобы его открыть
     webcam:
-        firstfloor: Первый этаж
-        secondfloor: Второй этаж
-        doorcam: Входная дверь
+        location:
+            webcam: Первый этаж
+            webcam2: Второй этаж
+            doorcam: Входная дверь
         fail: |
-            ⚠️ {{prefix}}: Камера пока недоступна
+            ⚠️ {{camLocationName}}: Камера пока недоступна
         failall: "⚠️ Все камеры недоступны"
     monitor:
         nonewmessages: Новых сообщений нет
