Better embassy api (#31)
* refactored embassy api and config

* bot and api start functions

* removed incorrect config keys and status monitor references

* fixed empty json body

* cleaner fetch, separated network module, removed any types

---------

Co-authored-by: Nickolay Kiselyov <n.kiselyov@itransition.com>

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -230,15 +230,13 @@ embassy:
         success: 🔑 Дверь открыта
         nomac: ❌ Твой MAC адрес не обнаружен роутером. Надо быть рядом со спейсом, чтобы его открыть
     webcam:
-        firstfloor: Первый этаж
-        secondfloor: Второй этаж
-        doorcam: Входная дверь
+        location:
+            webcam: Первый этаж
+            webcam2: Второй этаж
+            doorcam: Входная дверь
         fail: |
-            ⚠️ {{prefix}}: Камера пока недоступна
+            ⚠️ {{camLocationName}}: Камера пока недоступна
         failall: "⚠️ Все камеры недоступны"
-    monitor:
-        nonewmessages: Новых сообщений нет
-        fail: ⚠️ Не удалось получить статус, может, что-то с инетом, электричеством или le-fail?
     climate:
         data: |
             🌦 Климат в спейсе:
