broadcasting events and alerts

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -228,6 +228,7 @@ embassy:
         fail: ⚠️ Сервис недоступен
     unlock:
         success: 🔑 Дверь открыта
+        success-alert: 🚪 Дверь была открыта юзером {{user}}
         nomac: ❌ Твой MAC адрес не обнаружен роутером. Надо быть рядом со спейсом, чтобы его открыть
     webcam:
         location:
@@ -573,8 +574,10 @@ status:
             🚕 Планируют сегодня зайти [{{count}}]:
     open: |
         🔑 Спейс #*открыт#* для гостей {{username}}. Отличный повод зайти!
+    open-alert: 🔑 Спейс был открыт юзером {{user}}
     close: |
         🔒 Спейс #*закрыт#* {{username}}. Все отметившиеся отправлены домой.
+    close-alert: 🔒 Спейс был закрыт юзером {{user}}
     evict: 🔒 Список отметившихся очищен.
     in:
         notready: 🔐 Сейчас спейс не готов принять гостей... или резиденты опять забыли сделать /open
