--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -195,7 +195,7 @@ admin:
         success: 🗑 Пользователь {{username}} удален
         fail: ⚠️ Не удалось удалить пользователя (может его и не было?)
     messages:
-        restricted: 📵 Сорян, эта команда тебе недоступна
+        restricted: "📵 Сорян, нужно быть {{required}} для выполнения этой команды"
 birthday:
     nextbirthdays: |
         🎂 В этом месяце празднуют свои днюхи:
