/tonick /paid and costs history

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -418,6 +418,9 @@ funds:
         fail: Текущий сбор на аренду не найден
     residentsdonated: |
         💰 Резидентские донаты в этом месяце:
+    residentshistory:
+        fail: ⚠️ Не удалось сгенерировать график донатов
+        empty: ⚠️ Не найдено донатов за этот период
     export:
         empty: ⚠️ Нечего экспортировать
         fail: ⚠️ Что-то не так
@@ -432,6 +435,8 @@ funds:
             #`/tocab id#` - Отдельный донат Кабу по id
             #`/tocaball fund_name#` - Все донаты Кабу с определенного сбора
             #`/tocaball#` - Вообще все донаты Кабу (осторожно)
+            #`/tonick id#` - Отдельный донат Коле по id
+            #`/paid id#` - Отметить донат оплаченным по id (ушел на цель сбора)
             #`/transferdonation donation_id to username#` (td) - Передать донат другому бухгалтеру
         empty: 📂 На тебе ничего не числится
 needs:
