--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -624,3 +624,6 @@ status:
         period: "🕔 C {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)"
         tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
         help: "ℹ️ Также можно получить статистику за текущий месяц /month, предыдущий месяц /lastmonth, и за любой период #`/stats from 2023-05-01 to 2023-05-25#`"
+meme:
+    its_wednesday: 🐸 Ква-ква, а сегодня среда! Шанс получить от меня /zhabka сегодня высок как никогда (даже там, где они обычно не водятся)!
+    not_wednesday: 🐸 Ой, а сегодня жабки спят. Возвращайся в среду!
