--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -627,3 +627,44 @@ status:
 meme:
     its_wednesday: 🐸 Ква-ква, а сегодня среда! Шанс получить от меня /zhabka сегодня высок как никогда (даже там, где они обычно не водятся)!
     not_wednesday: 🐸 Ой, а сегодня жабки спят. Возвращайся в среду!
+topics:
+    general:
+        error: ⚠️ Что-то пошло не так
+        notfound: ⚠️ Топик не найден
+        empty: Пока ничего нет
+    topics:
+        list: |
+            📭 С помощью этой фичи можно подписаться на рассылку по интересующим тебя топикам.
+            Авторы топика смогут легко упоминать тебя в групповых чатах и отправлять тебе личные обновления (в будущем).
+
+            🗃 Список доступных топиков:
+            {{topics}}
+
+            📟 Команды:
+            Посмотреть список доступных топиков - /topics
+            Посмотреть текущие подписки - /subscriptions
+            Подписаться на рассылку - #`/subscribe topicname#`
+            Отписаться от рассылки - #`/unsubscribe topicname#`
+        member: |
+            📯 Команды резидентов:
+            Добавить топик - #`/addtopic topicname topicdescription#`
+            Удалить топик - #`/removetopic topicname#`
+    subscriptions:
+        list: |
+            📭 Ты подписан на следующие топики:
+            {{topics}}
+        empty: 🗿 Ты не подписан ни на один топик
+    subscribe:
+        success: 📭 Подписка на топик {{topic}} оформлена
+        fail: ⚠️ Не удалось подписаться на топик {{topic}}
+    unsubscribe:
+        success: 🗑 Подписка на топик {{topic}} удалена
+        fail: ⚠️ Не удалось отписаться от топика {{topic}}
+    add:
+        success: 📭 Топик {{topic}} добавлен
+        fail: ⚠️ Не удалось добавить топик {{topic}}
+    delete:
+        success: 🗑 Топик {{topic}} удален
+        fail: ⚠️ Не удалось удалить топик {{topic}}
+    tag:
+        nosubscribers: 🌚 Нет подписчиков на топик {{topic}}
