help updates for topics

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -645,6 +645,7 @@ topics:
             Посмотреть текущие подписки - /subscriptions
             Подписаться на рассылку - #`/subscribe topicname#`
             Отписаться от рассылки - #`/unsubscribe topicname#`
+            Тегнуть всех подписчиков топика - #`/tag topicname#`
         member: |
             📯 Команды резидентов:
             Добавить топик - #`/addtopic topicname topicdescription#`
