--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -137,10 +137,11 @@ basic:
         buttons:
             unlock: 🔑 Замок
             doorbell: 🔔 Звонок
-            webcam: 📹 I этаж
-            jigglycam: 📹 I этаж 2
-            webcam2: 📹 II этаж
-            doorcam: 📹 Вход
+            downstairs: 📹 I этаж
+            upstairs: 📹 II этаж
+            jigglycam: 📹 Jiggly
+            outdoors: 📹 Вход
+            printers: 📹 Принт
             superstatus: 🩻 Суперстатус
             conditioner: ❄️ Кондей
             meme: 🔫 Мемошная
@@ -233,10 +234,11 @@ embassy:
         nomac: ❌ Твой MAC адрес не обнаружен роутером. Надо быть рядом со спейсом, чтобы его открыть
     webcam:
         location:
-            webcam: Первый этаж
-            jigglycam: Первый этаж 2
-            webcam2: Второй этаж
-            doorcam: Входная дверь
+            downstairs: Первый этаж
+            upstairs: Первый этаж
+            jigglycam: Jigglypuff
+            outdoors: Входная дверь
+            printers: Принтерная
         fail: |
             ⚠️ {{camLocationName}}: Камера пока недоступна
         failall: "⚠️ Все камеры недоступны"
