--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -629,6 +629,12 @@ status:
 meme:
     its_wednesday: 🐸 Ква-ква, а сегодня среда! Шанс получить от меня /zhabka сегодня высок как никогда (даже там, где они обычно не водятся)!
     not_wednesday: 🐸 Ой, а сегодня жабки спят. Возвращайся в среду!
+    slap:
+        user: |
+            🖐 {{from}} slaps {{target}}
+        help: |
+            🖐 С помощью этой команды можно slap кого-нибудь
+            #`/slap username#`
 topics:
     general:
         error: ⚠️ Что-то пошло не так
