--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -72,6 +72,7 @@ basic:
     join: |
         🧑🏻‍🏫 Если вы находитесь в Ереване, увлечены технологиями и ищете единомышленников, заходите к нам.
         - Мы проводим регулярный день открытых дверей каждую пятницу в 20.00.
+        - По воскресеньям в 20.00 у нас проходит English Club, где можно попрактиковать свой английский.
         - Часто по понедельникам в 20.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
         - В любой другой день спейс тоже может принять гостей, вводи команду {{statusCommand}} чтобы узнать открыт ли спейс и есть ли там кто-нибудь.
 
@@ -131,7 +132,9 @@ basic:
             birthdays: 🎉 Дни рождения
             needs: 🛍 Нужды
             printers: 🖨 3D Принтеры
-            help: 📝 Команды бота
+            topics: 📭 Топики
+            me: 🧙‍♂️ Мой профиль
+            help: 📝 Остальные команды
     control:
         text: 🕹 Панель управления хакерспейсом для резидентов
         buttons:
@@ -644,10 +647,14 @@ topics:
         error: ⚠️ Что-то пошло не так
         notfound: ⚠️ Топик не найден
         empty: Пока ничего нет
+        nosubscribers: 🌚 Нет подписчиков на топик {{topic}}
+    buttons:
+        topics: 🗃 Доступные топики
+        subscriptions: 💌 Мои подписки
     topics:
         list: |
             📭 С помощью этой фичи можно подписаться на рассылку по интересующим тебя топикам.
-            Авторы топика смогут легко упоминать тебя в групповых чатах и отправлять тебе личные обновления (в будущем).
+            Авторы топика смогут легко упоминать тебя в групповых чатах и отправлять тебе личные уведомления.
 
             🗃 Список доступных топиков:
             {{topics}}
@@ -662,10 +669,15 @@ topics:
             📯 Команды резидентов:
             Добавить топик - #`/addtopic topicname topicdescription#`
             Удалить топик - #`/removetopic topicname#`
+            Личные сообщения подписчикам - #`/notify topicname message#`
     subscriptions:
         list: |
             📭 Ты подписан на следующие топики:
             {{topics}}
+
+            📟 Команды:
+            Посмотреть список доступных топиков - /topics
+            Отписаться от рассылки - #`/unsubscribe topicname#`
         empty: 🗿 Ты не подписан ни на один топик
     subscribe:
         success: 📭 Подписка на топик {{topic}} оформлена
@@ -679,5 +691,15 @@ topics:
     delete:
         success: 🗑 Топик {{topic}} удален
         fail: ⚠️ Не удалось удалить топик {{topic}}
-    tag:
-        nosubscribers: 🌚 Нет подписчиков на топик {{topic}}
+    notify:
+        help: |
+            📭 С помощью этой команды можно отправить личные сообщение всем подписчикам топика
+            #`/notify topicname message#`
+        message: |
+            📭 Вам сообщение из топика {{topic}}:
+
+            {{text}}
+
+            📟 Управление подписками - /subscriptions
+        started: 📯 Рассылка подписчикам {{topic}} начата. Личные сообщения получат {{count}} подписчиков в течение {{eta}} секунд
+        finished: ✅ Рассылка подписчикам {{topic}} завершена. Личные сообщения успешно получили {{received}}/{{count}} подписчиков
