inline menu linking

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -1,5 +1,13 @@
 general:
     error: Что-то пошло не так
+    buttons:
+        menu: 🏠 Меню
+        back: ↩️ Назад
+        cancel: ❌ Отмена
+        ok: 🆗 Ок
+        yes: ✅ Да
+        no: ❌ Нет
+        more: 📖 Подробнее
 basic:
     help: "{{availableCommands}}{{globalModifiers}}"
     about: |
@@ -104,6 +112,9 @@ basic:
 
             💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
             Подробнее можно узнать по команде {{donateCommand}}
+        buttons:
+            today: 📣 Сегодня
+            upcoming: 📆 Ближайшие
         opencalendar: Открыть календарь
         upcoming: |
             🗓 Наши ближайшие мероприятия:
@@ -134,7 +145,7 @@ basic:
             printers: 🖨 3D Принтеры
             topics: 📭 Топики
             me: 🧙‍♂️ Мой профиль
-            help: 📝 Остальные команды
+            help: 📝 Команды
     control:
         text: 🕹 Панель управления хакерспейсом для резидентов
         buttons:
@@ -649,8 +660,8 @@ topics:
         empty: Пока ничего нет
         nosubscribers: 🌚 Нет подписчиков на топик {{topic}}
     buttons:
-        topics: 🗃 Доступные топики
-        subscriptions: 💌 Мои подписки
+        topics: 🗃 Все топики
+        subscriptions: 💌 Подписки
     topics:
         list: |
             📭 С помощью этой фичи можно подписаться на рассылку по интересующим тебя топикам.
