removebuttons fix and aliases

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -513,6 +513,8 @@ service:
         notset: ⚠️ Бот еще не настроен для этой функциональности
         chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
         error: ⚠️ Что-то пошло не так, наверное слишком долго отвечает
+    removebuttons:
+        error: ⚠️ Не получилось убрать кнопки
 status:
     buttons:
         in: 🤝 Я в спейсе
