prevent double subscriptions and adding a topic twice

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -694,12 +694,15 @@ topics:
         empty: 🗿 Ты не подписан ни на один топик
     subscribe:
         success: 📭 Подписка на топик {{topic}} оформлена
+        already: 👌 Ты уже подписан на топик {{topic}}
         fail: ⚠️ Не удалось подписаться на топик {{topic}}
     unsubscribe:
         success: 🗑 Подписка на топик {{topic}} удалена
+        notsubscribed: 🙅‍♀️ Ты не подписан на топик {{topic}}
         fail: ⚠️ Не удалось отписаться от топика {{topic}}
     add:
         success: 📭 Топик {{topic}} добавлен
+        exists: 👌 Топик {{topic}} уже существует
         fail: ⚠️ Не удалось добавить топик {{topic}}
     delete:
         success: 🗑 Топик {{topic}} удален
