better translations for pub/sub

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -693,12 +693,24 @@ topics:
             Отписаться от рассылки - #`/unsubscribe topicname#`
         empty: 🗿 Ты не подписан ни на один топик
     subscribe:
-        success: 📭 Подписка на топик {{topic}} оформлена
-        already: 👌 Ты уже подписан на топик {{topic}}
+        success: |
+            📭 Подписка на топик {{topic}} оформлена
+
+            📟 Мои подписки - /subscriptions
+        already: |
+            👌 Ты уже подписан на топик {{topic}}
+
+            📟 Мои подписки - /subscriptions
         fail: ⚠️ Не удалось подписаться на топик {{topic}}
     unsubscribe:
-        success: 🗑 Подписка на топик {{topic}} удалена
-        notsubscribed: 🙅‍♀️ Ты не подписан на топик {{topic}}
+        success: |
+            🗑 Подписка на топик {{topic}} удалена
+
+            📟 Мои подписки - /subscriptions
+        notsubscribed: |
+            🙅‍♀️ Ты не подписан на топик {{topic}}
+
+            📟 Мои подписки - /subscriptions
         fail: ⚠️ Не удалось отписаться от топика {{topic}}
     add:
         success: 📭 Топик {{topic}} добавлен
@@ -716,6 +728,6 @@ topics:
 
             {{text}}
 
-            📟 Управление подписками - /subscriptions
+            📟 Мои подписки - /subscriptions
         started: 📯 Рассылка подписчикам {{topic}} начата. Личные сообщения получат {{count}} подписчиков в течение {{eta}} секунд
         finished: ✅ Рассылка подписчикам {{topic}} завершена. Личные сообщения успешно получили {{received}}/{{count}} подписчиков
