--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -381,7 +381,14 @@ embassy:
                 использованием и выключить после, если ей никто не пользуется.
                 Управление машиной в команде /gaming
             fail: ⚠️ Не получилось сгенерировать изображение, а /gaming точно включен и еще не сдох от тонны запросов?
-
+    ena:
+        street: Пушкина
+        mentioned: |
+            ⚡️ Опа, Улица {{street}} ({{hystreet}}) была упомянута на сайте электросетей Армении https://www.ena.am/Info.aspx?id=5&lang=1
+            Надеюсь, что это не в Ереване 😅
+        notmentioned: |
+            ⚡️ Улица {{street}} ({{hystreet}}) больше не упоминается на сайте электросетей Армении. Все в порядке 👌
+        fail: ⚠️ Не удалось проверить улицу
 funds:
     funds: |
         💰 Вот наши текущие сборы:
