ghost and timed messages

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -617,16 +617,15 @@ status:
     evict: 🔒 Список отметившихся очищен.
     in:
         notready: 🔐 Сейчас спейс не готов принять гостей... или резиденты опять забыли сделать /open
-        gotin: |
-            🤝 {{username}} теперь в спейсе.
-
-            📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически.
+        gotin: 🤝 {{username}} теперь в спейсе
+        until: " до {{until}}"
+        tryautoinside: 📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически.
     out:
         shouldnot: 🔐 А тебя и так нет в списке отмеченных (когда спейс закрывают, он очищается)
         gotout: 👋 {{username}} теперь не в спейсе. Надеемся, что еще вернется...
     inforce:
         notready: 🔐 Сорян, ты не можешь сейчас привести этого человека.
-        gotin: 🟢 {{memberusername}} привел(а) {{username}} в спейс.
+        gotin: 🟢 {{memberusername}} привел(а) {{username}} в спейс
     outforce:
         shouldnot: 🔐 Ээ нее, ты не можешь его отправить домой.
         gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}.
