--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -575,14 +575,17 @@ status:
             #`/autoinside status#` - Статус автовхода и автовыхода
             #`/autoinside enable#` - Включить автовход и автовыход  
             #`/autoinside disable#` - Выключить автовход и автовыход
-
+        ghost: "#`/autoinside ghost#` - Отмечаться только для резидентов"
         fail: ⚠️ Не удалось включить автовход, хотя MAC задан. Кто-нибудь, накостыляйте моему разработчику.
         nomac: |
             ⚠️ Твой MAC адрес не задан. Добавь его командой /setmac
         set: 🕺 Автовход и автовыход активированы для юзера {{username}} на MAC адрес {{usermac}}
         removed: 🚷 Автовход и автовыход выключены для юзера {{username}}
         isset: 🕺 Автовход и автовыход включены для юзера {{username}} на MAC адрес {{usermac}}
+        isghost: 👻 Автовход и автовыход включены для юзера {{username}} на MAC адрес {{usermac}} только для резидентов
         isnotset: 🚷 Автовход и автовыход выключены для юзера {{username}}
+        nouser: ⚠️ Твоего юзера не нашлось в базе (баг?)
+        notsupported: ⚠️ Эта команда пока не поддерживается для юзеров без юзернейма
     status:
         undefined: 🔐 Статус спейса неопределен. Откройте его кто-нибудь с помощью /open
         noconnection: |
