--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -485,7 +485,9 @@ needs:
         undo: ❌ Отменить покупку
 service:
     welcome:
-        confirm: 🇬🇧 Привет, {{newMember}}. Нажми на кнопку, если ты не бот, иначе не сможешь тут писать :)
+        confirm: |
+            🇬🇧 Hello {{newMember}}. Select your language if you are not a bot, otherwise you won’t be able to write here :)
+            🇷🇺 Привет, {{newMember}}. Выбери свой язык, если ты не бот, иначе не сможешь тут писать :)
         captcha: Тык
         main: |
             🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}
@@ -511,6 +513,12 @@ service:
             Загляни еще раз в мои команды /help, теперь тебе доступно много нового. Обрати внимание на /control, открывающий тебе безграничную (ну или не очень) власть над самим спейсом. Используй её с умом.
 
             🎉🎉🎉 Резиденты, поднимите свои сосиски за {{newMember}}
+    setlanguage:
+        select: 🗣 Выбери язык своего общения с ботом
+        success: ✅ Язык установлен как {{language}}
+        error: ⚠️ Не удалось установить язык
+        notsupported: |
+            ⚠️ Язык {{language}} не поддерживается, доступны только #`ru#` и #`en#`
     openai:
         help: |
             🔮 Задай вопрос нейросети. Доступно только в групповых чатах спейса.
