--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -134,6 +134,7 @@ basic:
 
             🔖 Для получения полного списка команд доступных тебе вводи /help. Некоторые команды видны только резидентам.
             📮 Что-то в спейсе не так? Вводи в боте /issue. Это анонимно.
+            🗣 Change bot language / Сменить язык бота - /lang
         buttons:
             status: 📯 Статус
             events: 🗓 Мероприятия
