--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -494,7 +494,7 @@ service:
             🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}
 
             Я @{{botName}}, бот-менеджер хакерспейса. Ко мне в личку можно зайти пообщаться, чтобы я вкратце о нас рассказал.
-            Не забудь также зайти в наш второй чатик @hackem_foo! Там ты найдешь разные топики по основным проектам спейса, обсуждения будущих мероприятий, новостей, мемов и так далее.
+            Не забудь также зайти в наш второй чатик (ссылка в описании этого чата)! Там ты найдешь разные топики по основным проектам спейса, обсуждения будущих мероприятий, новостей, мемов и так далее.
 
             🎉🎉🎉 Хакерчане, приветствуем {{newMember}}
         offtopic: |
