--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -48,15 +48,16 @@ basic:
         Мы будем рады любой поддержке. 
 
         Задонатить нам можно следующими способами:
-        💳 Банковская карта Visa/Mastercard Армении.
-          {{donateCardCommand}}
+        💵 Наличкой при встрече (самый лучший вариант)
+          {{donateCashCommand}}
         💰 Криптовалюта 
           {{cryptoCommands}}
-        💵 Наличкой при встрече (самый лучший вариант).
-          {{donateCashCommand}}
+        💳 Банковская карта Visa/Mastercard Армении
+          {{donateCardCommand}}
+        🛠 Полезное оборудование или расходники
+          {{donateEquipmentCommand}}
 
-        📊 Увидеть наши текущие сборы и ваш вклад можно по команде 
-          {{fundsCommand}}
+        📊 Увидеть наши текущие сборы и ваш вклад можно по команде {{fundsCommand}}
 
         💌 По вопросам доната обращайтесь к нашим бухгалтерам, они помогут:
         {{accountantsList}}
@@ -64,20 +65,24 @@ basic:
         🪙 Используй этот QR код или адрес ниже, чтобы задонатить нам в {{coin.fullname}}.
           
         ⚠️ Обрати внимание, что сеть {{coin.network}} и ты используешь правильный адрес:
-        `{{coin.address}}`
+        #`{{coin.address}}#`
               
-        ⚠️ Кошельки пока работают в тестовом режиме, прежде чем слать большую сумму, попробуй что-нибудь совсем маленькое или напиши бухгалтеру
-              
-        💌 Не забудь написать бухгалтеру, что ты задонатил(ла/ло) и скинуть код транзакции или ссылку
-        в https://mempool.space/ или аналогичном сервисе
+        💌 Не забудь написать бухгалтеру перед своим донатом и скинуть код транзакции или ссылку
+        в {{coin.explorer}} или аналогичном сервисе после
               
         🛍 Если хочешь задонатить натурой (ohh my) или другим способом - жми /donate
     donateCard: |
         💌 Для того, чтобы задонатить этим способом, напишите нашим бухгалтерам. Они подскажут вам текущие реквизиты или вы сможете договориться о времени и месте передачи. 
           
-        Вот они:
-        {{accountantsList}}
+        Вот они: {{accountantsList}}
+
         🛍 Если хочешь задонатить натурой или другим способом - жми /donate
+    donateEquipment: |
+        🛠 Если у тебя дома завалялся лишний 3d принтер, паяльник или другое полезное(!) оборудование, и ты готов пожертвовать его спейсу (или расшарить для общего пользования у нас) мы будем очень благодарны принять его.
+
+        🗑 Важно, чтобы оборудование или расходники были в рабочем состоянии или требовали минимального ремонта и при этом не принадлежали к категории "хлам".
+
+        🧙‍♀️ Обращайся к нашим резидентам, они помогут с принятием оборудования и решением всех вопросов.
     join: |
         🧑🏻‍🏫 Если вы находитесь в Ереване, увлечены технологиями и ищете единомышленников, заходите к нам.
         - Мы проводим регулярный день открытых дверей каждую пятницу в 20.00.
