--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -48,15 +48,16 @@ basic:
         We will be glad to receive any support.
 
         You can donate to us in the following ways:
-        💳 Bank card Visa/Mastercard of Armenia.
-          {{donateCardCommand}}
-        💰 Cryptocurrency
-          {{cryptoCommands}}
         💵 Cash upon meeting (the best option).
           {{donateCashCommand}}
+        💰 Cryptocurrency
+          {{cryptoCommands}}
+        💳 Bank card Visa/Mastercard of Armenia
+          {{donateCardCommand}}
+        🛠 Useful equipment or consumables
+          {{donateEquipmentCommand}}
 
-        📊 You can see our current donations and your contribution by command
-          {{fundsCommand}}
+        📊 You can see our current donations and your contribution by command {{fundsCommand}}
 
         💌 For donation questions, please contact our accountants, they will help:
         {{accountantsList}}
@@ -64,20 +65,24 @@ basic:
         🪙 Use this QR code or address below to donate to us at {{coin.fullname}}.
           
         ⚠️ Please note that the network is {{coin.network}} and you are using the correct address:
-        `{{coin.address}}`
-              
-        ⚠️ Wallets are still working in test mode, before sending a large amount, try something very small or write to an accountant
+        #`{{coin.address}}#`
 
-        💌 Don’t forget to write to the accountant that you donated (la/lo) and send the transaction code or link
-        in https://mempool.space/ or a similar service
+        💌 Don’t forget to write to the accountant before you donate and send the transaction code or link
+        in {{coin.explorer}} or a similar service after the donation
 
         🛍 If you want to donate in kind (ohh my) or in another way - click /donate
     donateCard: |
         💌 In order to donate this way, write to our accountants. They will tell you the current details or you can agree on the time and place of the transfer.
 
-        Here they are:
-        {{accountantsList}}
+        Here they are: {{accountantsList}}
+
         🛍 If you want to donate in kind or in another way, click /donate
+    donateEquipment: |
+        🛠 If you have an extra 3D printer, soldering iron or other useful(!) equipment lying around at home, and you are ready to donate it to Space (or share it for public use with us), we will be very grateful to accept it.
+
+        🗑 It is important that the equipment or consumables are in working order or require minimal repairs and do not belong to the “junk” category.
+
+        🧙‍♀️ Contact our residents, they will help with accepting equipment and resolving all issues.
     join: |
         🧑🏻‍🏫 If you are in Yerevan, passionate about technology and looking for like-minded people, come visit us.
         - We hold a regular open day every Friday at 20.00.
